amazon_grid.css
@import url('https://fonts.cdnfonts.com/css/amazon-ember');

body {
    font-family: amazon ember;
}

.container {  display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 0.3fr 5fr 3fr;
    grid-auto-columns: 1fr;
    gap: 0px 0px;
    grid-auto-flow: row;
    grid-template-areas:
      ". image ."
      ". loginbox ."
      ". . .";
  }
  
  .image { 
    grid-area: image;
    display: flex;
    justify-content: center;
 }
  
  .loginbox {  display: grid;
    grid-template-columns: 0.2fr 1fr 0.2fr;
    grid-template-rows: .5fr .5fr 1fr 1fr 1fr 2fr .5fr;
    gap: 0px 0px;
    grid-auto-flow: row;
    grid-template-areas:
      ". . ."
      ". signin ."
      ". email ."
      ". password ."
      ". signinbutton ."
      ". details ."
      ". . .";
    grid-area: loginbox;
    border-style: solid;
    border-radius: 10px;
    border-color: rgb(209, 209, 209);
    border-width: thin;
  }
  
  .signin { grid-area: signin; }
  
  .email { grid-area: email; }
  
  .password { grid-area: password; }

  .signinbutton { grid-area: signinbutton;}

  a {
    text-decoration: none;
    color: rgb(104,162,249);
}

  #button1 {
    width: 100%;
    background: linear-gradient(rgb(242,221,166), rgb(233,198,105));
    padding: 14px;
    border-radius: 8px;
    border: 1px solid;
  }

  #button1:active {
    background: linear-gradient(rgb(233,198,105), rgb(242,221,166));
}
  
  .details { grid-area: details; }
  
  .createaccount { grid-area: createaccount; }

  #button2 {
    width: 100%;
    background: linear-gradient(rgb(231, 231, 231),rgb(194, 194, 194));
    padding: 14px;
    border-radius: 8px;
    border: 1px solid;
  }

  #button2:active {
    background: linear-gradient(rgb(194, 194, 194), rgb(231, 231, 231));
  }

  .textbox {
    width: 100%;
    height: 35px;
}
  
#pwtext {
    display: flex;
    justify-content: space-between;
}

#newhere {
  width: 100%;
  text-align: center;
  border-bottom: 1px solid #000;
  border-color: rgb(180,180,188);;
  line-height: .1em;
  margin: 10px 0 20px;
}

#newhere span {
  background: #fff;
  padding: 0 10px;
  color: rgb(180,180,188);;
}

